--- a/6.开始一个node工程/package.json
+++ b/6.开始一个node工程/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ws": "^7.4.2"
+  }
 }
